--- a/BailSkinLoader.csproj
+++ b/BailSkinLoader.csproj
@@ -26,6 +26,9 @@
     <Reference Include="UnhollowerBaseLib">
       <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\BailOrJail\BepInEx\core\UnhollowerBaseLib.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine">
+      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\BailOrJail\BepInEx\unhollowed\UnityEngine.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.AssetBundleModule">
       <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\BailOrJail\BepInEx\unhollowed\UnityEngine.AssetBundleModule.dll</HintPath>
     </Reference>
